# advent-of-code-22

./: README.md  aoc.cabal
app/: aoc.hs
data/test/: 04a.txt  04b.txt  06a.txt  06b.txt  09b.txt  10b.txt  14a.txt  15a.txt  15b.txt  18a.txt  19b.txt  21a.txt  21b.txt  22a.txt  22b.txt
src/Lib/: Console.hs  Counter.hs  Matrix.hs  Parse.hs  Utils.hs
src/Lib/Utils/: Geometry.hs
src/Puzzles/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Map.hs  Puzzles.hs  Test.hs
