cabal-version:      2.4
name:               aoc
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             mknaw
maintainer:         mknawara@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-options
    default-language:    Haskell2010
    ghc-options:         -Wall
                         -Wcompat
                         -Widentities
                         -Wincomplete-uni-patterns
                         -Wincomplete-record-updates
                         -Wno-partial-type-signatures

    build-depends:
        base ^>=4.14.3.0
        , containers
        , megaparsec
        , text
    default-extensions:
        OverloadedStrings

library
    import:           common-options
    hs-source-dirs:   src
    exposed-modules:
        Puzzles.Day01
        Puzzles.Day02
        Puzzles.Map
        Puzzles.Puzzles
        Lib.Parse
        Lib.Utils

executable aoc-exe
    import:           common-options
    main-is:          aoc.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        aoc
        , optparse-applicative
    hs-source-dirs:   app
    default-language: Haskell2010
