cabal-version:      2.4
name:               aoc
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             mknaw
maintainer:         mknawara@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-options
    default-language:    Haskell2010
    ghc-options:         -Wall
                         -Wcompat
                         -Widentities
                         -Wincomplete-uni-patterns
                         -Wincomplete-record-updates
                         -Wno-partial-type-signatures

    build-depends:
        base ^>=4.14.3.0
        , ansi-terminal ==0.11.*
        , containers ==0.6.*
        , criterion ==1.6.*
        , directory ==1.3.*
        , filepath ==1.4.*
        , megaparsec ==9.2.*
        , split ==0.2.*
        , text ==1.2.*
    default-extensions:
        LambdaCase
        OverloadedStrings

library
    import:           common-options
    hs-source-dirs:   src
    exposed-modules:
        Puzzles.Day01
        Puzzles.Day02
        Puzzles.Day03
        -- Puzzles.Day04
        -- Puzzles.Day05
        -- Puzzles.Day06
        -- Puzzles.Day07
        -- Puzzles.Day08
        -- Puzzles.Day09
        -- Puzzles.Day10
        -- Puzzles.Day11
        -- Puzzles.Day12
        -- Puzzles.Day13
        -- Puzzles.Day14
        -- Puzzles.Day15
        -- Puzzles.Day16
        -- Puzzles.Day17
        -- Puzzles.Day18
        -- Puzzles.Day19
        -- Puzzles.Day20
        -- Puzzles.Day21
        -- Puzzles.Day22
        -- Puzzles.Day23
        -- Puzzles.Day24
        -- Puzzles.Day25
        Puzzles.Map
        Puzzles.Puzzles
        Lib.Parse
        Lib.Utils

executable aoc-exe
    import:           common-options
    main-is:          aoc.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        aoc
        , optparse-applicative
    hs-source-dirs:   app
    default-language: Haskell2010
